# Geant4_Flexible

Geant4/: CMakeLists.txt  EnergySetting.mac  LoopingScript.mac  MaterialTesting.mac  README.md  region_setup.mac  run_one_material.mac  run_t20_100k.mac  sim.cc  vis.mac
Geant4/100kEvent_NoOptical/: Test1.ipynb  analysis_output.csv
Geant4/GammaScan/: Test1.ipynb
Geant4/GammaScan/12.2mm/: combined.root  energy_bins_stats.csv  matched_data.csv
Geant4/GammaScan/15mm_Full/: Energy_100.root  Energy_1000.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  Energy_900.root  combined.root
Geant4/GammaScan/20mm/: Energy_100.root  Energy_1000.root  Energy_1100.root  Energy_1200.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  Energy_900.root  combined.root
Geant4/GammaScan/25mm_Full/: Energy_100.root  Energy_1000.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  Energy_900.root  combined.root
Geant4/GammaScan/30mm/: Energy_100.root  Energy_1000.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  Energy_900.root  combined.root
Geant4/GammaScan/35mm_Full/: Energy_100.root  Energy_1000.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  Energy_900.root  combined.root
Geant4/GammaScan/40mm/: Energy_100.root  Energy_1000.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  Energy_900.root  combined.root
Geant4/GammaScan/40mm100mmthick/: Energy_100.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  Energy_900.root  combined.root
Geant4/GammaScan/40mm50mmthick/: Energy_100.root  Energy_200.root  Energy_300.root  Energy_400.root  Energy_500.root  Energy_600.root  Energy_700.root  Energy_800.root  combined.root
Geant4/GammaScan/DistancceScan_15mm_Full/: Energy_500._Position0-1.50.root  Energy_500._Position0-3.50.root  Energy_500._Position0-5.50.root  Energy_500._Position0-7.50.root  Energy_500._Position00.50.root  Energy_500._Position02.50.root  Energy_500._Position04.50.root  Energy_500._Position06.50.root
Geant4/GammaScan/LSO/: Energy_100.root  Energy_1000.root  Energy_400.root  Energy_500.root  Energy_600.root
Geant4/GammaScan/LSO_WithReal/: Energy_100.root  Energy_200.root  Energy_600.root  Energy_700.root
Geant4/GammaScan/Validation/: Energy_662_4410.root
Geant4/GammaScan/classified_datasets/: dataset_400_keV.csv  dataset_700_keV.csv
Geant4/GammaScan/classified_datasets_edep/: dataset_0.000_to_0.012_MeV.csv  dataset_0.000_to_0.045_MeV.csv  dataset_0.050_to_0.052_MeV.csv  dataset_0.052_to_0.064_MeV.csv  dataset_0.064_to_0.077_MeV.csv  dataset_0.077_to_0.090_MeV.csv  dataset_0.108_to_0.124_MeV.csv  (+19 more)
Geant4/MaterialTest/: BGO.root  CsI.root  Data_Analysis.ipynb  LYSO.root  LaBr3.root
Geant4/Physics_list_Test/: DalitzPlotTest.ipynb
Geant4/Validate_Alpha/: Energy_5490.root
Geant4/e001_dataset/: Test1.ipynb
Geant4/macro/: EnergySetting.mac  LoopingEnergyScript.mac  LoopingPositionScript.mac  LoopingScript.mac  Na22Decay.mac  PositionSetting.mac  cosmic_muon.mac  cosmic_muon_angular.mac  cosmic_muon_energy.mac  manual_script.sh  region_setup.mac  region_setup_Co60.mac  region_setup_Cs137.mac  run_t20_100k.mac  run_t20_100k_Co60.mac  run_t20_100k_Cs137.mac  run_t20_100k_default.mac  run_t20_1k.mac  test_Energy.mac  vis.mac
(+305 files in other folders)
